<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      app:layout_boxedEdges="all">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/inner_frame_layout_padding">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginBottom="8dp"
          android:text="@string/settings_title"
          android:textColor="#FFFFFF"
          android:textSize="20sp" />
      <com.google.android.material.materialswitch.MaterialSwitch
          android:id="@+id/haptics_switch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/haptics_enabled"
          android:textColor="#FFFFFF" />
      <com.google.android.material.button.MaterialButton
          android:id="@+id/show_tutorial_button"
          style="@style/Widget.Material3.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:text="@string/show_tutorial" />
      <com.google.android.material.button.MaterialButton
          android:id="@+id/clear_history_button"
          style="@style/Widget.Material3.Button.TextButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/clear_history" />
    </LinearLayout>
  </ScrollView>
</androidx.wear.widget.BoxInsetLayout>
